site plan change

--- a/wdd130/wwr/site-plan-rafting.html
+++ b/wdd130/wwr/site-plan-rafting.html
@@ -19,7 +19,7 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>To spread the joy of a fun, engaging, and thrilling rafting experience.</p>
+    <p>To spread the joy of a fun, engaging, and thrilling rafting experience</p>
     <!-- change this -->
 
     <h3>Audience</h3>
